app/assets/stylesheets/side_bar_nav.sass
body
  transition: background-color .5s

.sidenav
  height: 100%
  width: 0
  position: fixed
  z-index: 5000
  top: 0
  left: 0
  overflow-x: hidden
  transition: 0.5s
  a
    padding: 5px 0 6px 0
    text-decoration: none
    font-size: 16px
    color: #818181
    display: block
    transition: 0.3s
    &:hover
      color: #f1f1f1
  span
    padding: 5px 0 6px 0
    text-decoration: none
    font-size: 16px
    color: #818181
    display: block
    transition: 0.3s
    &:hover
      color: #f1f1f1
  .closebtn .close-sort-btn
    position: absolute
    top: 0
    right: 25px
    font-size: 36px
    margin-left: 50px
    color: white

.openbtn-container
  height: 3rem
  margin: 1rem 0
  display: flex
  justify-content: space-around
  align-items: center
  margin-top: 0

.mobi-scroll
  height: 100%
  width: 0
  position: fixed
  z-index: 5000
  top: 0
  left: 0
  overflow-x: hidden
  transition: 0.5s
  -webkit-overflow-scrolling: touch !important
  height: 100%
  overflow: auto
  float: left
.mobi-scroll::-webkit-scrollbar
  width: 0 !important
.mobi-scroll
  overflow: -moz-scrollbars-none
.mobi-scroll
  -ms-overflow-style: none

.sidebar-js
  background: black
  width: 0
  z-index: 4000
  position: absolute
  left: 0
  top: 0
  height: 100vh
  top: -104px
  transition: .5s

.openbtn-sub-container
  background-color: black
  width: 49%
  text-align: center
  color: white

.close-filter-container
  color: white
  width: 100%
  margin-bottom: 2rem
  display: flex
  align-items: center
  justify-content: space-between

.sort-nav-container
  display: flex
  align-items: center
  min-width: 160px

.div-style
  padding: 0 1rem
  padding-right: 0

.js-load-more
  width: 397px

@media screen and (max-height: 450px)
  .sidenav
    padding-top: 15px
    a
      font-size: 18px



// tablet
@media screen and (min-width: 800px) and (max-width: 1024px)
  .hidden-on-large-screen
    display: none
  .row-style
    position: relative
  .model-close
    position: absolute
    top: 10px
    right: 16px
  .the-modal-sub
    height: 540px !important
  .the-modal
    height: auto !important
    // background-color: red


// desktop
@media screen and (min-width: 1025px)
  .hidden-on-large-screen
    display: none
  .row-style
    position: relative
  .model-close
    position: absolute
    top: 10px
    right: 16px
  .the-modal-sub
    height: 540px !important
  .the-modal
    height: auto !important
  .cart
    img
      margin-top: 0px !important
    // background-color: red !important


// mobile
@media screen and (min-width: 0px) and (max-width: 800px)
  .hidden-on-small-screen
    display: none
  .main-container
    min-width: 0
  .js-brand-filter-icon, .js-type-filter-icon, .js-size-filter-icon, .js-main-filter-icon, .js-price-filter-icon
    background-image: asset-url('add-white.svg')
  .filter-icon-minus
    background-image: asset-url('minus-symbol-white.svg')
  .filter-price-container, .filter-type-container, .filter-size-container, .filter-brand-container
    border-bottom: 1px solid white
  .sub-heading
    color: white
  .small-black-box
    margin-right: 0.5rem
  .row-style
    height: 60% !important
  .quick-view-button
    height: 25px !important
  .quick-view-text
    font-size: 11px !important
    top: 5px !important
  .the-modal-sub
    width: 100% !important
  .the-modal
    height: 100% !important
    width: 100% !important
    overflow-y: auto !important
    -webkit-overflow-scrolling: touch !important
    overflow-x: hidden
  .scroll-filter
    -webkit-overflow-scrolling: touch !important
  .sidenav
    -webkit-overflow-scrolling: touch !important
    height: 100%
    overflow: auto
  .sidenav::-webkit-scrollbar
    width: 0 !important
  .sidenav
    overflow: -moz-scrollbars-none
  .sidenav
    -ms-overflow-style: none
  .the-modal-sub-two
  .box-2
    width: 100%
  .app-container
    padding: 0
  .div-style
    padding: 0 !important
  .js-load-more
    width: 100%
  .img-container
    height: calc(100vw/2.5)
  .the-modal-sub
    height: 320px !important
  .main-content
    padding-top: 5px !important
  .cart
    img
      margin-top: -6px !important
  .complete-header-container
    transition: 0.5s !important
  .search-result-empty-text
    font-size: 18px

